# rutify

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/rutify/: __init__.py  _core.py  _version.py  exceptions.py  formatter.py  generator.py  rut.py  validator.py
tests/unit/: test_pyrut.py
