[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rutify"
dynamic = ["version"]
description = "Utilidades de RUT chilenos: validación, formateo, generación"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Stanley Bien Aime"}]
keywords = ["rut", "chile", "chileno", "validación", "formateo", "generación"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: Spanish",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = []   # zero runtime dependencies — by design

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov",
  "ruff>=0.4",
  "mypy>=1.9",
  "pre-commit",
]

[project.urls]
Homepage       = "https://github.com/bienaimedev/rutify"
Repository     = "https://github.com/bienaimedev/rutify"
"Bug Tracker"  = "https://github.com/bienaimedev/rutify/issues"
Changelog      = "https://github.com/bienaimedev/rutify/blob/main/CHANGELOG.md"

# --------------------------------------------------------------------------
# Hatch
# --------------------------------------------------------------------------
[tool.hatch.version]
path = "src/rutify/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/rutify"]

# --------------------------------------------------------------------------
# Ruff
# --------------------------------------------------------------------------
[tool.ruff]
line-length    = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH", "ANN"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

# --------------------------------------------------------------------------
# Mypy
# --------------------------------------------------------------------------
[tool.mypy]
strict         = true
python_version = "3.10"
files          = ["src/rutify"]

# --------------------------------------------------------------------------
# Pytest
# --------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--cov=rutify --cov-report=term-missing -v"

[tool.coverage.run]
source = ["src"]
omit   = ["*/tests/*", "*/_version.py"]